# Tesis-Master

./: README.md  Tesis 1.xlsx
Desarrollo/fullstack/backend/: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
Desarrollo/fullstack/backend/data/reports/: report.csv  report.json  report.md
Desarrollo/fullstack/backend/scripts/: reset_case.py  run_e2e.py  run_e2e.sh
Desarrollo/fullstack/backend/src/kmp_repair_webapi/: __init__.py  app.py  env_loader.py  job_runner.py  orchestrator.py  queries.py  settings.py  stages.py  worker.py
Desarrollo/fullstack/backend/src/kmp_repair_webapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Desarrollo/fullstack/backend/tests/: test_endpoints.py  test_webapi.py
Desarrollo/kmp-repair-pipeline/: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
Desarrollo/kmp-repair-pipeline/.claude/rules/: phase-discipline.md
Desarrollo/kmp-repair-pipeline/data/artifacts/: .gitignore
Desarrollo/kmp-repair-pipeline/data/reports/: .gitignore  report 2.csv  report.csv  report.json  report.md
Desarrollo/kmp-repair-pipeline/docs/: guia-ui-casos-uso-pipeline.md  refactor-map.md
Desarrollo/kmp-repair-pipeline/migrations/: env.py
Desarrollo/kmp-repair-pipeline/migrations/versions/: 1c03c4a3181a_add_required_kotlin_version_to_error_.py  c4beede9862d_initial_schema.py  d7e8f9a0b1c2_add_symbol_name_and_efr_normalized.py  d9f4e6a7b8c9_add_pipeline_jobs_and_status_transitions.py
Desarrollo/kmp-repair-pipeline/scripts/: bootstrap_env.sh  run_e2e.sh  seed_real_cases.py
Desarrollo/kmp-repair-pipeline/src/kmp_repair_pipeline/baselines/: __init__.py  baseline_runner.py
Desarrollo/kmp-repair-pipeline/src/kmp_repair_pipeline/case_builder/: __init__.py  case_factory.py
Desarrollo/kmp-repair-pipeline/src/kmp_repair_pipeline/case_bundle/: __init__.py  bundle.py  evidence.py  serialization.py
Desarrollo/kmp-repair-pipeline/src/kmp_repair_pipeline/cli/: config.py  main.py
Desarrollo/kmp-repair-pipeline/src/kmp_repair_pipeline/domain/: events.py  (+1 more)
Desarrollo/kmp-repair-pipeline/tests/integration/: test_db_schema.py
Desarrollo/kmp-repair-pipeline/tests/unit/: test_case_builder_phase5.py  test_case_bundle.py  test_domain.py  test_evaluation_phase12.py  test_improvements.py  test_ingest.py  test_llm_provider_vertex.py  test_localization_phase8.py  test_repair_phase9.py  test_reporting_phase13.py  test_runners_phase6.py  test_static_analysis.py  test_structural_builder_phase7.py  test_validation_phase10.py
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/: CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/.claude/rules/: no-destructive-db.md  python-first.md
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/data/reports/: report.json  report.md
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/docs/: architecture-memo.md  web-experience-architecture.md
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/migrations/versions/: a1b2c3d4e5f6_add_pr_title_to_dependency_events.py
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/src/kmp_repair_pipeline/: __init__.py
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/tests/integration/: conftest.py  test_bundle_rehydration.py  test_db_schema.py
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/tests/unit/: test_explanation_phase11.py  test_ingest_phase4.py  test_localization_phase8.py  test_reporting_phase13.py  test_runners_phase6.py  test_structural_builder_phase7.py  test_validation_phase10.py  test_webapi_phase14.py  test_webapi_worker_runtime.py
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/web/: package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
Frontend_Backend V1 Old Logic/kmp-repair-pipeline/web/components/: RunComposer.tsx
(+238 files in other folders)
